Fix not centered business heading

--- a/css/business.css
+++ b/css/business.css
@@ -4,6 +4,7 @@
 }
 /* Heading */
 #heading {
+    justify-content: center;
     display: flex;
     gap: 80px;
     padding-top: 0;
